--- a/sitio3/index.html
+++ b/sitio3/index.html
@@ -5,14 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>∆ TRIL∆TERA ∇</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>TRIL∆TERA</h1>
-    <div>
-        <a href="sitio1/index.html">Sitio 1</a>
-        <a href="sitio2/index.html">Sitio 2</a>
-        <a href="sitio3/index.html">Sitio 3</a>
-    </div>
+    <h1>Sitio 1</h1>
+   
 </body>
 </html>
