--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>∆ TRIL∆TERA ∇</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">     
+    <script src="https://kit.fontawesome.com/50610e1081.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
-    <h1>TRIL∆TERA</h1>
-    <div>
-        <a href="sitio1/index.html">Sitio 1</a>
-        <a href="sitio2/index.html">Sitio 2</a>
-        <a href="sitio3/index.html">Sitio 3</a>
-    </div>
+    <header>
+        <h1><a href="/">TRILATERA</a></h1>
+        <nav>
+            <ul>
+                <li><a class="nav-link">Inicio</a></li>
+                <li><a class="nav-link">Sobre mí</a></li>
+                <li><a class="nav-link">Dónde encontrarme</a></li>
+                <li><a class="nav-link">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="button-container">
+            <a class="button" href="sitio1/index.html">Sitio 1</a>
+            <a class="button" href="sitio2/index.html">Sitio 2</a>
+            <a class="button" href="sitio3/index.html">Sitio 3</a>
+        </div>
+    </main>
+    <footer>
+        <p>TRIL∆TERA</p>
+    </footer>
 </body>
 </html>
